# mpreal

./: AUTHORS  CMakeLists.txt  FOSS License Exception.txt  FindMPREAL.cmake  MPRealSupport  Makefile.am  Makefile.in  README  README.md  aclocal.m4  changelog  configure  configure.ac  example.cpp  makefile  mpreal.cpp  mpreal.h
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
cmake/: README.md
example/: example.cpp  makefile
